# surveys

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.md  PLAN.md  PLUGIN_DEVELOPMENT_GUIDE.md  README.md  TODO.md  Taskfile.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: branch.yml  github-actions-demo.yml  pr_test.yml  quality.yml  static.yml  update_changelog.yml
data/test_data/: categorical_data.csv  prepared_data.csv  sentiment_data.csv
data/test_data/chi2_test/: chi2_test.csv
data/typst/: q15.typ  q16.typ  q18.typ  q20.typ  q21.typ  q22.typ
docs/: Makefile  conf.py  index.md  index.rst  overview.md
docs/diversity/: chi2_test_map.ipynb  demographics.ipynb  icrc2023_diversity.ipynb  index.md  overview.md  questionnaire.md  responses.ipynb
docs/diversity/responses/: q01_age.ipynb  q02_gender_identity.ipynb  q03_workplace.ipynb  q04_hometown.ipynb  q05_job_title.ipynb  q06_research_domain.ipynb  q07_research_type.ipynb  q08_research_years.ipynb  q09_career_satisfaction.ipynb  q10_hours.ipynb  q11_signup.ipynb  q12_dei_group.ipynb  q12q17_bubblechart.ipynb  q13_female_ratio.ipynb  q14_female_ratio_thoughts.ipynb  q15_good_practice_example.ipynb  q15_good_practice_example.md  q15_good_practice_examples.ipynb  q16_group_concerns.ipynb  q16_group_concerns.md  q17_dei_individual.ipynb  q18_agree_disagree.ipynb  q19_science_interest.ipynb  q20_individual_concerns.md  q21_dei_hindering.md  q22_remarks.md
docs/diversity/wip/: q01_age.ipynb  q01_age_group.ipynb  q02_gender_identity.ipynb  q03_workplace.ipynb  q04_hometown.ipynb  q06_research_domain.ipynb  (+5 more)
docs/guides/: index.md
docs/logbooks/: chi2_test_map.ipynb  demographics.ipynb
docs/modules/: index.rst
docs/notebooks/: 10_chi2_map.ipynb  chi2_map.ipynb  chi2_test_map.ipynb  demographics.ipynb  icrc2023_diversity.ipynb  responses.ipynb
docs/releases/: v0.7.0.md
docs/report/: index.md  responses.ipynb
docs/survey/: index.md
docs/titanite/: index.md
mystmd/: README.md  myst.yml
mystmd/report/: index.md  questionnaire.md  responses.ipynb
notebooks/: 00_config.ipynb  00_read_data.ipynb  01_preprocess.ipynb  02_insight.ipynb  02_response.ipynb  03_crosstab.ipynb  03_hbar.ipynb  04_chi2_test.ipynb  05_others.ipynb  06_cluster.ipynb  10_chi2_map.ipynb  10_quick_summary.ipynb  10_stats.ipynb  20_gender.ipynb  20_interest.ipynb  30_comments.ipynb  icrc2023_diversity.ipynb  others.ipynb  preprocess.ipynb  q01_age.ipynb  q02_gender.ipynb  q03_region.ipynb  q12_group_initiatives.ipynb  q13_gender_ratio.ipynb  q13q14_clustered.ipynb  q15_sentiment.ipynb  q17_individual_initiatives.ipynb  q19_interest.ipynb  quick_summary.ipynb
notebooks/analysis/: 10_quick_summary.ipynb  10_stats.ipynb  30_comments.ipynb  q03_region.ipynb  q12_group_initiatives.ipynb  q13_gender_ratio.ipynb
notebooks/development/: 01_preprocess.ipynb  02_insight.ipynb  02_response.ipynb  05_others.ipynb  06_cluster.ipynb
plugins/: __init__.py
plugins/icrc2023/: __init__.py  schema.py
report/: slide.typ
sandbox/: app.py  config.toml  config_report.toml
templates/: release.md
tests/: test_cli_plugin.py  test_config.py  test_data.py  test_icrc2023_schema.py  test_integration_real_world.py  test_processor.py  test_schema.py  test_security.py
titanite/: __init__.py  _core.py  analysis.py  cli.py  config.py  core.py  preprocess.py
titanite/analysis/: demographics.py
titanite/core/: __init__.py  processor.py  schema.py  security.py
typst/: q15.typ  q16.typ  q18.typ  q20.typ  q21.typ  q22.typ  questions.typ  slide.typ
(+40 files in other folders)
