[tool.poetry]
name = "titanite"
version = "0.6.0"
description = ""
authors = ["Shota Takahashi <shotakaha@kmi.nagoya-u.ac.jp>"]
readme = "README.md"

[tool.poetry.scripts]
ti = "titanite.cli:app"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.0.3"
altair = "^5.5.0"
vl-convert-python = "^1.7.0"
typer = {version = "^0.16.0", extras = ["all"]}
loguru = "^0.7.3"
pydantic = "^2.11.5"
geopandas = "^1.0.1"
streamlit = "^1.45.1"
textblob = "^0.19.0"
tqdm = "^4.67.1"
scipy = "^1.15.3"
deprecated = "^1.2.18"
hvplot = "^0.11.2"

[tool.poetry.group.dev.dependencies]
commitizen = "^4.8.2"
pytest = "^8.3.5"
ipykernel = "^6.29.4"


[tool.poetry.group.docs.dependencies]
sphinx-book-theme = "^1.1.4"
sphinx-copybutton = "^0.5.2"
myst-nb = "^1.2.0"
sphinx-autobuild = "^2024.10.3"
sphinx-autodoc2 = "^0.5.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "titanite/__init__.py:__version__"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
