[tool.poetry]
name = "titanite"
version = "0.6.0"
description = ""
authors = ["Shota Takahashi <shotakaha@kmi.nagoya-u.ac.jp>"]
readme = "README.md"

[tool.poetry.scripts]
ti = "titanite.cli:app"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.3.2"
altair = "^5.5.0"
vl-convert-python = "^1.8.0"
typer = {version = "^0.17.4", extras = ["all"]}
loguru = "^0.7.3"
pydantic = "^2.11.9"
geopandas = "^1.1.1"
streamlit = "^1.49.1"
textblob = "^0.19.0"
tqdm = "^4.67.1"
scipy = "^1.16.2"
deprecated = "^1.2.18"
hvplot = "^0.12.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^4.9.1"
pytest = "^8.4.2"
ipykernel = "^6.30.1"


[tool.poetry.group.docs.dependencies]
sphinx-book-theme = "^1.1.4"
sphinx-copybutton = "^0.5.2"
myst-nb = "^1.3.0"
sphinx-autobuild = "^2025.8.25"
sphinx-autodoc2 = "^0.5.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "titanite/__init__.py:__version__"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
