[tool.poetry]
name = "titanite"
version = "0.6.0"
description = ""
authors = ["Shota Takahashi <shotakaha@kmi.nagoya-u.ac.jp>"]
readme = "README.md"

[tool.poetry.scripts]
ti = "titanite.cli:app"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.3.3"
altair = "^6.0.0"
vl-convert-python = "^1.9.0"
typer = {version = "^0.21.1", extras = ["all"]}
loguru = "^0.7.3"
pydantic = "^2.12.5"
geopandas = "^1.1.2"
streamlit = "^1.54.0"
textblob = "^0.19.0"
tqdm = "^4.67.3"
scipy = "^1.17.0"
deprecated = "^1.3.1"
hvplot = "^0.12.2"

[tool.poetry.group.dev.dependencies]
commitizen = "^4.13.0"
pytest = "^9.0.2"
ipykernel = "^7.1.0"


[tool.poetry.group.docs.dependencies]
sphinx-book-theme = "^1.1.4"
sphinx-copybutton = "^0.5.2"
myst-nb = "^1.3.0"
sphinx-autobuild = "^2025.8.25"
sphinx-autodoc2 = "^0.5.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "titanite/__init__.py:__version__"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
